pmap; trace; GC settings