@@ -10,10 +10,17 @@
                  [org.clojure/tools.cli "0.3.5"]
                  [org.apache.commons/commons-compress "1.10"]
                  [org.tukaani/xz "1.5"]
+                 [org.clojure/tools.trace "0.7.9"]
                  ]
   :main ^:skip-aot stuff.core
   :target-path "target/%s"
-  :profiles {:uberjar {:aot :all}}
-  :jvm-opts ["-Xmx4g"
-             "-Xms4g"
+  :profiles {:uberjar {:aot :all}
+             }
+  :jvm-opts ["-Xmx2g"
+             "-Xms2g"
+             "-XX:NewRatio=3"
+             "-Xloggc:gc.log"
+             "-XX:+UnlockExperimentalVMOptions"
+             "-XX:+UseG1GC"
+             "-XX:+PrintGCDateStamps"
              "-server"])
